fix para table de ban bootstrap

--- a/html/index.html
+++ b/html/index.html
@@ -182,7 +182,7 @@
           <h3>2 Titulo de la campaña</h3>
         </div>
       </div>
-      <div class="ban-item"><img src="assets/img/bg-video.png" alt="Campaña item tercero" class="ban-img-responsive"/>
+      <div id="player" class="ban-item"><img src="assets/img/bg-video.png" alt="Campaña item tercero" class="ban-img-responsive"/>
         <div class="ban-carousel-caption">
           <h3>3 Titulo de la campaña</h3>
         </div>
@@ -206,5 +206,37 @@
       </div>
       <div class="ban-col-xs-5 ban-col-xs-offset-2"><a href="#">Incorporate aquí</a></div>
     </div>
+  </div>
+</div>
+<div class="ban-container">
+  <div class="ban-row">
+    <article class="ban-col-md-12"> 
+      <header>sadd</header>
+      <div class="tablas">
+        <table class="ban-table ban-table-striped"> 
+          <tr>
+            <th>asdasdas</th>
+            <th>asdasdas</th>
+            <th>asdasdas</th>
+            <th>asdasdas</th>
+            <th>asdasdas</th>
+          </tr>
+          <tr>
+            <td>asdsdasdasdadankdqwkldmwlkdmalksmd</td>
+            <td>asdsdasdasdadankdqwkldmwlkdmalksmd</td>
+            <td>asdsdasdasdadankdqwkldmwlkdmalksmd</td>
+            <td>asdsdasdasdadankdqwkldmwlkdmalksmd</td>
+            <td>asdsdasdasdadankdqwkldmwlkdmalksmd</td>
+          </tr>
+          <tr>
+            <td>asdsdasdasdadankdqwkldmwlkdmalksmd</td>
+            <td>asdsdasdasdadankdqwkldmwlkdmalksmd</td>
+            <td>asdsdasdasdadankdqwkldmwlkdmalksmd</td>
+            <td>asdsdasdasdadankdqwkldmwlkdmalksmd</td>
+            <td>asdsdasdasdadankdqwkldmwlkdmalksmd</td>
+          </tr>
+        </table>
+      </div>
+    </article>
   </div>
 </div>
