adiccion de imagenes y videojs youtube, cambio en estructura vista general

--- a/html/index.html
+++ b/html/index.html
@@ -46,7 +46,7 @@
           <li>Dólar<a href="#"><i class="fa fa-sort-asc"></i> 127.02 2.7%</a></li>
           <li>Euro<a href="#"><i class="fa fa-sort-asc"></i> 127.02 2.7%</a></li>
           <li>IPSA<a href="#"><i class="fa fa-sort-asc"></i> 127.02 2.7%</a></li>
-          <li>S&P 500<a href="#"><i class="fa fa-sort-asc"></i> 127.02 2.7%</a></li>
+          <li>S&amp;P 500<a href="#"><i class="fa fa-sort-asc"></i> 127.02 2.7%</a></li>
           <li>IGBVL<a href="#"><i class="fa fa-sort-asc"></i> 127.02 2.7%</a></li>
           <li><a href="#" class="ver">Ver más</a></li>
         </ul>
@@ -172,26 +172,26 @@
 <section id="testimonios">
   <div id="carrusel-testimonios" data-ban-ride="ban-carousel" class="ban-carousel ban-slide">
     <div role="listbox" class="ban-carousel-inner">
-      <div class="ban-item ban-active"><img height="" src="assets/img/bg-video.png" alt="Campaña item primero" class="ban-img-responsive"/>
-        <div class="ban-carousel-caption">
-          <h3>1 Titulo de la campaña</h3>
+      <div class="width ratio5-1 ban-item ban-active">
+        <div class="contenido">
+          <div id="player1"></div>
         </div>
       </div>
-      <div class="ban-item"><img src="assets/img/bg-video.png" alt="Campaña item segundo" class="ban-img-responsive"/>
-        <div class="ban-carousel-caption">
-          <h3>2 Titulo de la campaña</h3>
+      <div class="width ratio5-1 ban-item">
+        <div class="contenido">
+          <div id="player2"></div>
         </div>
       </div>
-      <div id="player" class="ban-item"><img src="assets/img/bg-video.png" alt="Campaña item tercero" class="ban-img-responsive"/>
-        <div class="ban-carousel-caption">
-          <h3>3 Titulo de la campaña</h3>
+      <div class="width ratio5-1 ban-item">
+        <div class="contenido">
+          <div id="player3"></div>
         </div>
       </div>
     </div>
   </div>
   <div id="avatar" class="ban-container">
     <div class="ban-row">
-      <div class="clientes ban-col-xs-12"><a data-ban-target="#carrusel-testimonios" data-ban-slide-to="0"><img src="assets/img/cliente-01.png" alt="" class="ban-img-responsive"/></a><a data-ban-target="#carrusel-testimonios" data-ban-slide-to="1"><img src="assets/img/cliente-02.png" alt="" class="ban-img-responsive"/></a><a data-ban-target="#carrusel-testimonios" data-ban-slide-to="2"><img src="assets/img/cliente-03.png" alt="" class="ban-img-responsive"/></a></div>
+      <div class="clientes ban-col-xs-12"><a data-ban-target="#carrusel-testimonios" data-ban-slide-to="0" class="bullet-video"><img src="assets/img/cliente-01.png" alt="" class="ban-img-responsive"/></a><a data-ban-target="#carrusel-testimonios" data-ban-slide-to="1" class="bullet-video"><img src="assets/img/cliente-02.png" alt="" class="ban-img-responsive"/></a><a data-ban-target="#carrusel-testimonios" data-ban-slide-to="2" class="bullet-video"><img src="assets/img/cliente-03.png" alt="" class="ban-img-responsive"/></a></div>
       <div class="ban-col-xs-12">
         <h2>Nuestros clientes hablan por nosotros</h2>
       </div>
@@ -208,35 +208,5 @@
     </div>
   </div>
 </div>
-<div class="ban-container">
-  <div class="ban-row">
-    <article class="ban-col-md-12"> 
-      <header>sadd</header>
-      <div class="tablas">
-        <table class="ban-table ban-table-striped"> 
-          <tr>
-            <th>asdasdas</th>
-            <th>asdasdas</th>
-            <th>asdasdas</th>
-            <th>asdasdas</th>
-            <th>asdasdas</th>
-          </tr>
-          <tr>
-            <td>asdsdasdasdadankdqwkldmwlkdmalksmd</td>
-            <td>asdsdasdasdadankdqwkldmwlkdmalksmd</td>
-            <td>asdsdasdasdadankdqwkldmwlkdmalksmd</td>
-            <td>asdsdasdasdadankdqwkldmwlkdmalksmd</td>
-            <td>asdsdasdasdadankdqwkldmwlkdmalksmd</td>
-          </tr>
-          <tr>
-            <td>asdsdasdasdadankdqwkldmwlkdmalksmd</td>
-            <td>asdsdasdasdadankdqwkldmwlkdmalksmd</td>
-            <td>asdsdasdasdadankdqwkldmwlkdmalksmd</td>
-            <td>asdsdasdasdadankdqwkldmwlkdmalksmd</td>
-            <td>asdsdasdasdadankdqwkldmwlkdmalksmd</td>
-          </tr>
-        </table>
-      </div>
-    </article>
-  </div>
-</div>
+<!--Script video home-->
+<script src="assets/js/videoYoutube.min.js"></script>
