adiccion js dropddown, adicion css,adiccion vista-general

--- a/html/header.html
+++ b/html/header.html
@@ -1,4 +1,46 @@
 
+<div class="ban-dev-grid">
+  <div class="ban-container">
+    <div class="ban-row">
+      <div class="ban-col-md-1">
+        <div></div>
+      </div>
+      <div class="ban-col-md-1">
+        <div></div>
+      </div>
+      <div class="ban-col-md-1">
+        <div></div>
+      </div>
+      <div class="ban-col-md-1">
+        <div></div>
+      </div>
+      <div class="ban-col-md-1">
+        <div></div>
+      </div>
+      <div class="ban-col-md-1">
+        <div></div>
+      </div>
+      <div class="ban-col-md-1">
+        <div></div>
+      </div>
+      <div class="ban-col-md-1">
+        <div></div>
+      </div>
+      <div class="ban-col-md-1">
+        <div></div>
+      </div>
+      <div class="ban-col-md-1">
+        <div></div>
+      </div>
+      <div class="ban-col-md-1">
+        <div></div>
+      </div>
+      <div class="ban-col-md-1">
+        <div></div>
+      </div>
+    </div>
+  </div>
+</div>
 <header>
   <div class="ban-container">
     <div class="ban-row">
