cambios en css y jade, creacion de componentes

--- a/html/header.html
+++ b/html/header.html
@@ -41,7 +41,7 @@
     </div>
   </div>
 </div>
-<header>
+<header class="main">
   <div class="ban-container">
     <div class="ban-row">
       <div class="menu-sec-a ban-col-md-2 ban-col-lg-3">
