modulos para header, widget contextual

--- a/html/vista-general.html
+++ b/html/vista-general.html
@@ -30,7 +30,14 @@
     </div>
     <div class="ban-col-xs-5">
       <div class="widget-contextual-indicador">
-        <!-- aqui tiene que ir el grafico de angular--><img src="assets/img/mi-indicador.png" alt="" class="ban-img-responsive"/><a href="#" class="widget-contextual-setting-grafico"><i class="fa fa-cog"></i></a>
+        <!-- aqui tiene que ir el grafico de angular--><img src="assets/img/mi-indicador.png" alt="" class="ban-img-responsive"/>
+        <div class="widget-contextual-actions">
+          <div class="cont-icon-interaction">
+            <div class="vertical-align">
+              <div><a href="#" class="icon-interaction"><i class="fa fa-cog"></i></a></div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <!-- fin bienvenida-->
@@ -40,7 +47,12 @@
     <header>
       <div class="ban-row">
         <div class="ban-col-xs-12">
-          <h2 class="titulo-section">Resumen de empresas</h2>
+          <h2 class="title-general-healding">Resumen de empresas<small>Cuenta 0</small></h2>
+        </div>
+        <div class="cont-icon-interaction">
+          <div class="vertical-align">
+            <div><a href="#" class="icon-interaction icon-interaction-border"><i class="fa fa-cog"></i></a><a href="#" class="icon-interaction icon-interaction-border"><i class="fa fa-cog"></i></a><a href="#" class="icon-interaction icon-interaction-border"><i class="fa fa-cog"></i></a></div>
+          </div>
         </div>
       </div>
     </header>
@@ -89,6 +101,11 @@
                 <div>
                   <div id="drop-operaciones-recurentes"></div>
                 </div>
+              </div>
+            </div>
+            <div class="cont-icon-interaction icon-interaction-pad-right">
+              <div class="vertical-align">
+                <div><a href="#" class="icon-interaction"><i class="fa fa-cog"></i></a></div>
               </div>
             </div>
           </header>
@@ -177,6 +194,11 @@
                 <div>
                   <div id="drop-operaciones-recurentes"></div>
                 </div>
+              </div>
+            </div>
+            <div class="cont-icon-interaction icon-interaction-pad-right">
+              <div class="vertical-align">
+                <div><a href="#" class="icon-interaction"><i class="fa fa-cog"></i></a></div>
               </div>
             </div>
           </header>
